sintactico/sintactico.output
Estado 133 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: PRINCIPAL bloque

    2 bloque: INICIOBLOQUE declar_variables_locales declar_subprogs sentencias FINBLOQUE

    3 declar_subprogs: declar_subprogs declar_subprog
    4                | %empty

    5 declar_subprog: cabecera_subprograma bloque

    6 declar_variables_locales: VAR variables_locales FINVAR
    7                         | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: TIPOBASICO lista_variables PUNTOYCOMA
   11                        | error

   12 lista_variables: variable COMA lista_variables
   13                | variable error lista_variables
   14                | variable

   15 variable: IDENT declar_matriz
   16         | IDENT

   17 declar_matriz: CORIZQ CONSTENTERA CORDER
   18              | CORIZQ CONSTENTERA COMA CONSTENTERA CORDER

   19 cabecera_subprograma: tipo_retorno IDENT PARIZQ lista_parametros PARDER

   20 tipo_retorno: TIPOBASICO declar_matriz
   21             | TIPOBASICO

   22 lista_parametros: TIPOBASICO variable COMA lista_parametros
   23                 | TIPOBASICO variable error lista_parametros
   24                 | TIPOBASICO variable

   25 sentencias: sentencia sentencias
   26           | %empty

   27 sentencia: bloque
   28          | asignacion PUNTOYCOMA
   29          | si
   30          | mientras
   31          | entrada PUNTOYCOMA
   32          | salida PUNTOYCOMA
   33          | devolver PUNTOYCOMA
   34          | repetir_hasta PUNTOYCOMA

   35 asignacion: variable ASIGNACION expresion

   36 si: SI PARIZQ expresion PARDER sentencia SINO sentencia
   37   | SI PARIZQ expresion PARDER sentencia

   38 mientras: MIENTRAS PARIZQ expresion PARDER sentencia

   39 entrada: LEER lista_variables

   40 salida: ESCRIBIR lista_expresiones_cad

   41 devolver: DEVOLVER expresion

   42 repetir_hasta: REPETIR sentencia HASTA PARIZQ expresion PARDER

   43 expresion: PARIZQ expresion PARDER
   44          | OPUNARIO expresion
   45          | SUMRES expresion
   46          | expresion OPBINARIO expresion
   47          | expresion OPOR expresion
   48          | expresion OPRELACIONAL expresion
   49          | expresion OPAND expresion
   50          | expresion SUMRES expresion
   51          | variable
   52          | constante
   53          | llamada_funcion
   54          | error

   55 lista_expresiones: expresion COMA lista_expresiones
   56                  | expresion

   57 lista_expresiones_cad: exp_cad COMA lista_expresiones_cad
   58                      | exp_cad

   59 exp_cad: expresion
   60        | CONSTCADENA

   61 constante: CONSTENTERA
   62          | constante_matriz
   63          | CONSTLOGICA
   64          | CONSTREAL
   65          | CONSTCARACTER

   66 llamada_funcion: IDENT PARIZQ lista_expresiones PARDER
   67                | IDENT PARIZQ PARDER

   68 constante_matriz: INICIOBLOQUE auxiliar_matriz FINBLOQUE

   69 auxiliar_matriz: agregado_entero
   70                | agregado_real
   71                | agregado_logico
   72                | agregado_caracter

   73 agregado_entero: INICIOBLOQUE fila_agregado_entero FINBLOQUE

   74 fila_agregado_entero: fila_agregado_entero PUNTOYCOMA lista_entera
   75                     | lista_entera

   76 lista_entera: lista_entera COMA CONSTENTERA
   77             | CONSTENTERA

   78 agregado_real: INICIOBLOQUE fila_agregado_real FINBLOQUE

   79 fila_agregado_real: fila_agregado_real PUNTOYCOMA lista_real
   80                   | lista_real

   81 lista_real: lista_real COMA CONSTREAL
   82           | CONSTREAL

   83 agregado_logico: INICIOBLOQUE fila_agregado_logico FINBLOQUE

   84 fila_agregado_logico: fila_agregado_logico PUNTOYCOMA lista_logica
   85                     | lista_logica

   86 lista_logica: lista_logica COMA CONSTLOGICA
   87             | CONSTLOGICA

   88 agregado_caracter: INICIOBLOQUE fila_agregado_caracter FINBLOQUE

   89 fila_agregado_caracter: fila_agregado_caracter PUNTOYCOMA lista_caracter
   90                       | lista_caracter

   91 lista_caracter: lista_caracter COMA CONSTCARACTER
   92               | CONSTCARACTER


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 11 13 23 54
OPOR (258) 47
OPAND (259) 49
OPRELACIONAL (260) 48
SUMRES (261) 45 50
OPBINARIO (262) 46
OPUNARIO (263) 44
ASIGNACION (264) 35
CORIZQ (265) 17 18
CORDER (266) 17 18
TIPOBASICO (267) 10 20 21 22 23 24
CONSTENTERA (268) 17 18 61 76 77
CONSTLOGICA (269) 63 86 87
CONSTREAL (270) 64 81 82
CONSTCARACTER (271) 65 91 92
CONSTCADENA (272) 60
COMA (273) 12 18 22 55 57 76 81 86 91
PARDER (274) 19 36 37 38 42 43 66 67
PARIZQ (275) 19 36 37 38 42 43 66 67
PUNTOYCOMA (276) 10 28 31 32 33 34 74 79 84 89
INICIOBLOQUE (277) 2 68 73 78 83 88
FINBLOQUE (278) 2 68 73 78 83 88
VAR (279) 6
FINVAR (280) 6
SI (281) 36 37
SINO (282) 36
MIENTRAS (283) 38
LEER (284) 39
ESCRIBIR (285) 40
DEVOLVER (286) 41
REPETIR (287) 42
HASTA (288) 42
PRINCIPAL (289) 1
IDENT (290) 15 16 19 66 67


No terminales con las reglas donde aparecen

$accept (36)
    en la izquierda: 0
programa (37)
    en la izquierda: 1, en la derecha: 0
bloque (38)
    en la izquierda: 2, en la derecha: 1 5 27
declar_subprogs (39)
    en la izquierda: 3 4, en la derecha: 2 3
declar_subprog (40)
    en la izquierda: 5, en la derecha: 3
declar_variables_locales (41)
    en la izquierda: 6 7, en la derecha: 2
variables_locales (42)
    en la izquierda: 8 9, en la derecha: 6 8
cuerpo_declar_variables (43)
    en la izquierda: 10 11, en la derecha: 8 9
lista_variables (44)
    en la izquierda: 12 13 14, en la derecha: 10 12 13 39
variable (45)
    en la izquierda: 15 16, en la derecha: 12 13 14 22 23 24 35 51
declar_matriz (46)
    en la izquierda: 17 18, en la derecha: 15 20
cabecera_subprograma (47)
    en la izquierda: 19, en la derecha: 5
tipo_retorno (48)
    en la izquierda: 20 21, en la derecha: 19
lista_parametros (49)
    en la izquierda: 22 23 24, en la derecha: 19 22 23
sentencias (50)
    en la izquierda: 25 26, en la derecha: 2 25
sentencia (51)
    en la izquierda: 27 28 29 30 31 32 33 34, en la derecha: 25 36
    37 38 42
asignacion (52)
    en la izquierda: 35, en la derecha: 28
si (53)
    en la izquierda: 36 37, en la derecha: 29
mientras (54)
    en la izquierda: 38, en la derecha: 30
entrada (55)
    en la izquierda: 39, en la derecha: 31
salida (56)
    en la izquierda: 40, en la derecha: 32
devolver (57)
    en la izquierda: 41, en la derecha: 33
repetir_hasta (58)
    en la izquierda: 42, en la derecha: 34
expresion (59)
    en la izquierda: 43 44 45 46 47 48 49 50 51 52 53 54, en la derecha:
    35 36 37 38 41 42 43 44 45 46 47 48 49 50 55 56 59
lista_expresiones (60)
    en la izquierda: 55 56, en la derecha: 55 66
lista_expresiones_cad (61)
    en la izquierda: 57 58, en la derecha: 40 57
exp_cad (62)
    en la izquierda: 59 60, en la derecha: 57 58
constante (63)
    en la izquierda: 61 62 63 64 65, en la derecha: 52
llamada_funcion (64)
    en la izquierda: 66 67, en la derecha: 53
constante_matriz (65)
    en la izquierda: 68, en la derecha: 62
auxiliar_matriz (66)
    en la izquierda: 69 70 71 72, en la derecha: 68
agregado_entero (67)
    en la izquierda: 73, en la derecha: 69
fila_agregado_entero (68)
    en la izquierda: 74 75, en la derecha: 73 74
lista_entera (69)
    en la izquierda: 76 77, en la derecha: 74 75 76
agregado_real (70)
    en la izquierda: 78, en la derecha: 70
fila_agregado_real (71)
    en la izquierda: 79 80, en la derecha: 78 79
lista_real (72)
    en la izquierda: 81 82, en la derecha: 79 80 81
agregado_logico (73)
    en la izquierda: 83, en la derecha: 71
fila_agregado_logico (74)
    en la izquierda: 84 85, en la derecha: 83 84
lista_logica (75)
    en la izquierda: 86 87, en la derecha: 84 85 86
agregado_caracter (76)
    en la izquierda: 88, en la derecha: 72
fila_agregado_caracter (77)
    en la izquierda: 89 90, en la derecha: 88 89
lista_caracter (78)
    en la izquierda: 91 92, en la derecha: 89 90 91


Estado 0

    0 $accept: . programa $end

    PRINCIPAL  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: PRINCIPAL . bloque

    INICIOBLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 4


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    2 bloque: INICIOBLOQUE . declar_variables_locales declar_subprogs sentencias FINBLOQUE

    VAR  desplazar e ir al estado 6

    $default  reduce usando la regla 7 (declar_variables_locales)

    declar_variables_locales  ir al estado 7


Estado 4

    1 programa: PRINCIPAL bloque .

    $default  reduce usando la regla 1 (programa)


Estado 5

    0 $accept: programa $end .

    $default  aceptar


Estado 6

    6 declar_variables_locales: VAR . variables_locales FINVAR

    error       desplazar e ir al estado 8
    TIPOBASICO  desplazar e ir al estado 9

    variables_locales        ir al estado 10
    cuerpo_declar_variables  ir al estado 11


Estado 7

    2 bloque: INICIOBLOQUE declar_variables_locales . declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 4 (declar_subprogs)

    declar_subprogs  ir al estado 12


Estado 8

   11 cuerpo_declar_variables: error .

    $default  reduce usando la regla 11 (cuerpo_declar_variables)


Estado 9

   10 cuerpo_declar_variables: TIPOBASICO . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 13

    lista_variables  ir al estado 14
    variable         ir al estado 15


Estado 10

    6 declar_variables_locales: VAR variables_locales . FINVAR
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 8
    TIPOBASICO  desplazar e ir al estado 9
    FINVAR      desplazar e ir al estado 16

    cuerpo_declar_variables  ir al estado 17


Estado 11

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 9 (variables_locales)


Estado 12

    2 bloque: INICIOBLOQUE declar_variables_locales declar_subprogs . sentencias FINBLOQUE
    3 declar_subprogs: declar_subprogs . declar_subprog

    TIPOBASICO    desplazar e ir al estado 18
    INICIOBLOQUE  desplazar e ir al estado 3
    SI            desplazar e ir al estado 19
    MIENTRAS      desplazar e ir al estado 20
    LEER          desplazar e ir al estado 21
    ESCRIBIR      desplazar e ir al estado 22
    DEVOLVER      desplazar e ir al estado 23
    REPETIR       desplazar e ir al estado 24
    IDENT         desplazar e ir al estado 13

    $default  reduce usando la regla 26 (sentencias)

    bloque                ir al estado 25
    declar_subprog        ir al estado 26
    variable              ir al estado 27
    cabecera_subprograma  ir al estado 28
    tipo_retorno          ir al estado 29
    sentencias            ir al estado 30
    sentencia             ir al estado 31
    asignacion            ir al estado 32
    si                    ir al estado 33
    mientras              ir al estado 34
    entrada               ir al estado 35
    salida                ir al estado 36
    devolver              ir al estado 37
    repetir_hasta         ir al estado 38


Estado 13

   15 variable: IDENT . declar_matriz
   16         | IDENT .

    CORIZQ  desplazar e ir al estado 39

    $default  reduce usando la regla 16 (variable)

    declar_matriz  ir al estado 40


Estado 14

   10 cuerpo_declar_variables: TIPOBASICO lista_variables . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 41


Estado 15

   12 lista_variables: variable . COMA lista_variables
   13                | variable . error lista_variables
   14                | variable .

    error  desplazar e ir al estado 42
    COMA   desplazar e ir al estado 43

    PUNTOYCOMA  reduce usando la regla 14 (lista_variables)


Estado 16

    6 declar_variables_locales: VAR variables_locales FINVAR .

    $default  reduce usando la regla 6 (declar_variables_locales)


Estado 17

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 8 (variables_locales)


Estado 18

   20 tipo_retorno: TIPOBASICO . declar_matriz
   21             | TIPOBASICO .

    CORIZQ  desplazar e ir al estado 39

    $default  reduce usando la regla 21 (tipo_retorno)

    declar_matriz  ir al estado 44


Estado 19

   36 si: SI . PARIZQ expresion PARDER sentencia SINO sentencia
   37   | SI . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 45


Estado 20

   38 mientras: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 46


Estado 21

   39 entrada: LEER . lista_variables

    IDENT  desplazar e ir al estado 13

    lista_variables  ir al estado 47
    variable         ir al estado 15


Estado 22

   40 salida: ESCRIBIR . lista_expresiones_cad

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    CONSTCADENA    desplazar e ir al estado 55
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable               ir al estado 59
    expresion              ir al estado 60
    lista_expresiones_cad  ir al estado 61
    exp_cad                ir al estado 62
    constante              ir al estado 63
    llamada_funcion        ir al estado 64
    constante_matriz       ir al estado 65


Estado 23

   41 devolver: DEVOLVER . expresion

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 66
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 24

   42 repetir_hasta: REPETIR . sentencia HASTA PARIZQ expresion PARDER

    INICIOBLOQUE  desplazar e ir al estado 3
    SI            desplazar e ir al estado 19
    MIENTRAS      desplazar e ir al estado 20
    LEER          desplazar e ir al estado 21
    ESCRIBIR      desplazar e ir al estado 22
    DEVOLVER      desplazar e ir al estado 23
    REPETIR       desplazar e ir al estado 24
    IDENT         desplazar e ir al estado 13

    bloque         ir al estado 25
    variable       ir al estado 27
    sentencia      ir al estado 67
    asignacion     ir al estado 32
    si             ir al estado 33
    mientras       ir al estado 34
    entrada        ir al estado 35
    salida         ir al estado 36
    devolver       ir al estado 37
    repetir_hasta  ir al estado 38


Estado 25

   27 sentencia: bloque .

    $default  reduce usando la regla 27 (sentencia)


Estado 26

    3 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce usando la regla 3 (declar_subprogs)


Estado 27

   35 asignacion: variable . ASIGNACION expresion

    ASIGNACION  desplazar e ir al estado 68


Estado 28

    5 declar_subprog: cabecera_subprograma . bloque

    INICIOBLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 69


Estado 29

   19 cabecera_subprograma: tipo_retorno . IDENT PARIZQ lista_parametros PARDER

    IDENT  desplazar e ir al estado 70


Estado 30

    2 bloque: INICIOBLOQUE declar_variables_locales declar_subprogs sentencias . FINBLOQUE

    FINBLOQUE  desplazar e ir al estado 71


Estado 31

   25 sentencias: sentencia . sentencias

    INICIOBLOQUE  desplazar e ir al estado 3
    SI            desplazar e ir al estado 19
    MIENTRAS      desplazar e ir al estado 20
    LEER          desplazar e ir al estado 21
    ESCRIBIR      desplazar e ir al estado 22
    DEVOLVER      desplazar e ir al estado 23
    REPETIR       desplazar e ir al estado 24
    IDENT         desplazar e ir al estado 13

    $default  reduce usando la regla 26 (sentencias)

    bloque         ir al estado 25
    variable       ir al estado 27
    sentencias     ir al estado 72
    sentencia      ir al estado 31
    asignacion     ir al estado 32
    si             ir al estado 33
    mientras       ir al estado 34
    entrada        ir al estado 35
    salida         ir al estado 36
    devolver       ir al estado 37
    repetir_hasta  ir al estado 38


Estado 32

   28 sentencia: asignacion . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 73


Estado 33

   29 sentencia: si .

    $default  reduce usando la regla 29 (sentencia)


Estado 34

   30 sentencia: mientras .

    $default  reduce usando la regla 30 (sentencia)


Estado 35

   31 sentencia: entrada . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 74


Estado 36

   32 sentencia: salida . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 75


Estado 37

   33 sentencia: devolver . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 76


Estado 38

   34 sentencia: repetir_hasta . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 77


Estado 39

   17 declar_matriz: CORIZQ . CONSTENTERA CORDER
   18              | CORIZQ . CONSTENTERA COMA CONSTENTERA CORDER

    CONSTENTERA  desplazar e ir al estado 78


Estado 40

   15 variable: IDENT declar_matriz .

    $default  reduce usando la regla 15 (variable)


Estado 41

   10 cuerpo_declar_variables: TIPOBASICO lista_variables PUNTOYCOMA .

    $default  reduce usando la regla 10 (cuerpo_declar_variables)


Estado 42

   13 lista_variables: variable error . lista_variables

    IDENT  desplazar e ir al estado 13

    lista_variables  ir al estado 79
    variable         ir al estado 15


Estado 43

   12 lista_variables: variable COMA . lista_variables

    IDENT  desplazar e ir al estado 13

    lista_variables  ir al estado 80
    variable         ir al estado 15


Estado 44

   20 tipo_retorno: TIPOBASICO declar_matriz .

    $default  reduce usando la regla 20 (tipo_retorno)


Estado 45

   36 si: SI PARIZQ . expresion PARDER sentencia SINO sentencia
   37   | SI PARIZQ . expresion PARDER sentencia

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 81
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 46

   38 mientras: MIENTRAS PARIZQ . expresion PARDER sentencia

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 82
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 47

   39 entrada: LEER lista_variables .

    $default  reduce usando la regla 39 (entrada)


Estado 48

   54 expresion: error .

    $default  reduce usando la regla 54 (expresion)


Estado 49

   45 expresion: SUMRES . expresion

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 83
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 50

   44 expresion: OPUNARIO . expresion

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 84
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 51

   61 constante: CONSTENTERA .

    $default  reduce usando la regla 61 (constante)


Estado 52

   63 constante: CONSTLOGICA .

    $default  reduce usando la regla 63 (constante)


Estado 53

   64 constante: CONSTREAL .

    $default  reduce usando la regla 64 (constante)


Estado 54

   65 constante: CONSTCARACTER .

    $default  reduce usando la regla 65 (constante)


Estado 55

   60 exp_cad: CONSTCADENA .

    $default  reduce usando la regla 60 (exp_cad)


Estado 56

   43 expresion: PARIZQ . expresion PARDER

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 85
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 57

   68 constante_matriz: INICIOBLOQUE . auxiliar_matriz FINBLOQUE

    INICIOBLOQUE  desplazar e ir al estado 86

    auxiliar_matriz    ir al estado 87
    agregado_entero    ir al estado 88
    agregado_real      ir al estado 89
    agregado_logico    ir al estado 90
    agregado_caracter  ir al estado 91


Estado 58

   15 variable: IDENT . declar_matriz
   16         | IDENT .
   66 llamada_funcion: IDENT . PARIZQ lista_expresiones PARDER
   67                | IDENT . PARIZQ PARDER

    CORIZQ  desplazar e ir al estado 39
    PARIZQ  desplazar e ir al estado 92

    $default  reduce usando la regla 16 (variable)

    declar_matriz  ir al estado 40


Estado 59

   51 expresion: variable .

    $default  reduce usando la regla 51 (expresion)


Estado 60

   46 expresion: expresion . OPBINARIO expresion
   47          | expresion . OPOR expresion
   48          | expresion . OPRELACIONAL expresion
   49          | expresion . OPAND expresion
   50          | expresion . SUMRES expresion
   59 exp_cad: expresion .

    OPOR          desplazar e ir al estado 93
    OPAND         desplazar e ir al estado 94
    OPRELACIONAL  desplazar e ir al estado 95
    SUMRES        desplazar e ir al estado 96
    OPBINARIO     desplazar e ir al estado 97

    $default  reduce usando la regla 59 (exp_cad)


Estado 61

   40 salida: ESCRIBIR lista_expresiones_cad .

    $default  reduce usando la regla 40 (salida)


Estado 62

   57 lista_expresiones_cad: exp_cad . COMA lista_expresiones_cad
   58                      | exp_cad .

    COMA  desplazar e ir al estado 98

    $default  reduce usando la regla 58 (lista_expresiones_cad)


Estado 63

   52 expresion: constante .

    $default  reduce usando la regla 52 (expresion)


Estado 64

   53 expresion: llamada_funcion .

    $default  reduce usando la regla 53 (expresion)


Estado 65

   62 constante: constante_matriz .

    $default  reduce usando la regla 62 (constante)


Estado 66

   41 devolver: DEVOLVER expresion .
   46 expresion: expresion . OPBINARIO expresion
   47          | expresion . OPOR expresion
   48          | expresion . OPRELACIONAL expresion
   49          | expresion . OPAND expresion
   50          | expresion . SUMRES expresion

    OPOR          desplazar e ir al estado 93
    OPAND         desplazar e ir al estado 94
    OPRELACIONAL  desplazar e ir al estado 95
    SUMRES        desplazar e ir al estado 96
    OPBINARIO     desplazar e ir al estado 97

    $default  reduce usando la regla 41 (devolver)


Estado 67

   42 repetir_hasta: REPETIR sentencia . HASTA PARIZQ expresion PARDER

    HASTA  desplazar e ir al estado 99


Estado 68

   35 asignacion: variable ASIGNACION . expresion

    error          desplazar e ir al estado 48
    SUMRES         desplazar e ir al estado 49
    OPUNARIO       desplazar e ir al estado 50
    CONSTENTERA    desplazar e ir al estado 51
    CONSTLOGICA    desplazar e ir al estado 52
    CONSTREAL      desplazar e ir al estado 53
    CONSTCARACTER  desplazar e ir al estado 54
    PARIZQ         desplazar e ir al estado 56
    INICIOBLOQUE   desplazar e ir al estado 57
    IDENT          desplazar e ir al estado 58

    variable          ir al estado 59
    expresion         ir al estado 100
    constante         ir al estado 63
    llamada_funcion   ir al estado 64
    constante_matriz  ir al estado 65


Estado 69

    5 declar_subprog: cabecera_subprograma bloque .
